--- a/generators/app/templates/_index.html
+++ b/generators/app/templates/_index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8"/>
     <title>test</title>
     <link rel="stylesheet" href="styles/style.css">
-    <script src="js/main.js"></script>
-    <script src="lib/phaser.min.js"></script>
+    <script src="scripts/game.js"></script>
   </head>
   <body>
     <div id="game-content"></div>
