--- a/generators/app/templates/_index.html
+++ b/generators/app/templates/_index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>test</title>
+    <title><%= appName %></title>
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/game.js"></script>
   </head>
