--- a/generators/app/templates/styles/style.css
+++ b/generators/app/templates/styles/style.css
@@ -4,7 +4,16 @@
 }
 
 html, body {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+
+#game-content {
+  <% if(centerApp){ %>
+  margin: 20px auto;
+  width: <%= appWidth %>px;
+  <% } %>
 }
