always set width and height for #game-content

--- a/generators/app/templates/styles/style.css
+++ b/generators/app/templates/styles/style.css
@@ -14,6 +14,7 @@ html, body {
 #game-content {
   <% if(centerApp){ %>
   margin: 20px auto;
-  width: <%= appWidth %>px;
   <% } %>
+  width: <%= appWidth %>px;
+  height: <%= appHeight %>px;
 }
